# SQL-minifier

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
load_sql_proc/: Cargo.toml
load_sql_proc/src/: lib.rs
minify_sql/: Cargo.toml
minify_sql/src/: lib.rs
minify_sql_proc/: Cargo.toml
minify_sql_proc/src/: lib.rs
src/: file_parser.rs  lib.rs  minifier.rs  types.rs
test_data/: test_file_1_minified.sql  test_file_2.sql_minified.sql  test_file_3_minified.sql
tests/: test_balanced_comment2.sql  test_balanced_comment2_minified.sql  test_balanced_multiline_comments.sql  test_balanced_multiline_comments_minified.sql  test_file_1_minified.sql  test_file_2.sql  test_file_2_minified.sql  test_file_3.sql  test_file_3_minified.sql  test_minification.rs  test_sqlite_feature.sql  test_sqlite_feature_minified.sql  test_table_name_with_type.sql  test_table_name_with_type_minified.sql
