[package]
name = "sql_minifier"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
description = "A simple SQL file minimizer"
readme = "README.md"
repository = "https://github.com/mvisani/SQL-minifier"
keywords = ["sql", "minifier"]
categories = ["filesystem", "database"]
authors = ["Marco Visani"]

[dependencies]
minify_sql = { path = "minify_sql" }
load_sql_proc = { path = "load_sql_proc" }
minify_sql_proc = { path = "minify_sql_proc" }

[workspace]
members = [
    "minify_sql",
    "load_sql_proc",
    "minify_sql_proc"
]