[package]
name = "sql_minifier"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Crate providing methods and procedural macros to minify SQL code, optionally at compile time."
categories.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
minify_sql.workspace = true
load_sql_proc.workspace = true
minify_sql_proc.workspace = true

[workspace.package]
version = "0.1.3"
readme = "README.md"
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/mvisani/SQL-minifier"
categories = ["database", "compression"]
authors = ["Marco Visani", "Luca Cappelletti"]
keywords = ["sql", "minifier", "compression", "database", "macro"]

[workspace.dependencies]
minify_sql = { version = "0.1.3" }
load_sql_proc = { version = "0.1.3" }
minify_sql_proc = { version = "0.1.3" }
quote = "1.0.36"
regex = "1.10.4"
syn = "2.0.59"

[workspace]
members = ["minify_sql", "load_sql_proc", "minify_sql_proc"]
