[package]
name = "minify_sql"
edition.workspace = true
version.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true
description = "Crate providing a function to minify SQL queries."

[dependencies]
quote.workspace = true
regex.workspace = true

[features]
gluesql = []
sqlite = []
