[package]
name = "minify_sql_proc"
edition.workspace = true
version.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
readme.workspace = true
description = "A procedural macro for minifying SQL queries at compile time."

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
regex.workspace = true
minify_sql.workspace = true